--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="about-section-col">
                     <div class="about">
                         <p>
-                            My name is Jariwala Harsh Prakashchandra. I am 21 years old. I am pursing Bachelor of Engineering with Computer Engineering from Sarvajanik College of Engineering & Technology. I am responsible and hardworking, so I study hard to obtain good grades in
+                            My name is Jariwala Harsh Prakashchandra. I am 21 years old. I am pursuing Bachelor of Engineering with Computer Engineering from Sarvajanik College of Engineering & Technology. I am responsible and hardworking, so I study hard to obtain good grades in
                             schools and also in college. My hobbies include drawing, carfting and travelling. Although I don’t get to travel much, I relish every moment I get to. I am generally pleased with my life. </p>
                         <!-- <a href="#">Read More</a> -->
                     </div>
